methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:9: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if (isFacingTrail()){
                         ^SlugSnail:29: error: not found: value verte
  verte=getCouleurSol()==Color.c
  ^